common-apps/esphome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - esphome.bensonphillips.dev
      secretName: letsencrypt
  ingressClassName: "nginx"
  rules:
    - host: esphome.bensonphillips.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: esphome
              port:
                name: "http"

---

apiVersion: v1
kind: Service
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  ports:
  - port: 6052
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: esphome
  clusterIP: None
